# mcl.sickbay

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  buildout.cfg  mcl.sickbay.sublime-project  setup.cfg  setup.py
src/mcl/: __init__.py
src/mcl/sickbay/: __init__.py  db.py  json.py
src/mcl/sickbay/data/: 12_78_ClinicalCore_20200624_0_DATA.csv  12_78_ClinicalCore_20200624_0_META.csv
src/mcl/sickbay/model/: __init__.py  base.py  clinicalcore.py  enums.py  genomics.py  images.py  organs.py  specimens.py
src/mcl/sickbay/tests/: __init__.py
