# 🤢 Sickbay: Clinical data model for the Consortium for Molecular and Cellular
# Characterization of Screen-Detected Lesions. This is the Python setuptools
# metadata for the package.


[metadata]
name = mcl.sickbay
version = attr: mcl.sickbay.VERSION
description = 🤢 Sickbay: Clinical data model for the Consortium for Molecular and Cellular Characterization of Screen-Detected Lesions.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Sean Kelly
author_email = sean.kelly@jpl.nasa.gov
url = https://github.com/MCLConsortium/mcl.sickbay
keywords = rest api web clinical data lesions cancer orm model database
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Buildout
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    psycopg2==2.8.5
    sqlalchemy==1.3.19
    aenum==2.2.4


[options.package_data]
* = *.txt, *.rst, *.md


[options.packages.find]
where = src


[options.extras_require]


[options.entry_points]
console_scripts =
    create-clinical-db = mcl.sickbay.db:main
